add delete cascade for reactions on messages model

--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,39 @@ name = "pypi"
 
 [packages]
 flask = "*"
+emoji = "*"
+click = "*"
+gunicorn = "*"
+itsdangerous = "*"
+python-dotenv = "*"
+six = "*"
+flask-cors = "*"
+flask-sqlalchemy = "*"
+flask-wtf = "*"
+jinja2 = "*"
+markupsafe = "*"
+sqlalchemy = "*"
+wtforms = "*"
+flask-migrate = "*"
+flask-login = "*"
+alembic = "*"
+python-dateutil = "*"
+python-editor = "*"
+greenlet = "*"
+mako = "*"
+bidict = "*"
+dnspython = "*"
+eventlet = "*"
+flask-socketio = "*"
+importlib-metadata = "*"
+python-engineio = "*"
+python-socketio = "*"
+zipp = "*"
+werkzeug = "*"
+psycopg2 = "*"
 
 [dev-packages]
+pylint = "*"
 
 [requires]
 python_version = "3.9"
