--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -2,37 +2,37 @@
 
 [alembic]
 # template used to generate migration files
+# file_template = %%(rev)s_%%(slug)s
 file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d%%(second).2d_%%(slug)s
-
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
 # revision_environment = false
 
-
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root,sqlalchemy,alembic,flask_migrate
 
 [handlers]
 keys = console
-
 [formatters]
 keys = generic
-
 [logger_root]
 level = WARN
 handlers = console
 qualname =
-
 [logger_sqlalchemy]
 level = WARN
 handlers =
 qualname = sqlalchemy.engine
-
 [logger_alembic]
 level = INFO
 handlers =
 qualname = alembic
+
+[logger_flask_migrate]
+level = INFO
+handlers =
+qualname = flask_migrate
 
 [handler_console]
 class = StreamHandler
