--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,8 +19,8 @@
     "socket.io-client": "^4.7.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "CI=false && react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
