--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 alembic==1.13.1
 astroid==3.0.2
-bidict==0.22.1
+bidict==0.23.1
 blinker==1.7.0
 click==8.1.7
 dill==0.3.7
-dnspython==2.5.0
-emoji==2.10.0
-eventlet==0.35.0
-flask==3.0.1
+dnspython==2.6.1
+emoji==2.10.1
+eventlet==0.35.2
+flask==3.0.2
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SocketIO==5.3.6
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
+gevent==24.2.1
 greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
@@ -21,25 +22,27 @@ importlib-metadata==7.0.1
 isort==5.13.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
-Mako==1.3.1
-MarkupSafe==2.1.4
+Mako==1.3.2
+MarkupSafe==2.1.5
 mccabe==0.7.0
 packaging==23.2
 platformdirs==4.1.0
 psycopg2==2.9.9
 pylint==3.0.3
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-editor==1.0.4
-python-engineio==4.8.2
-python-socketio==5.11.0
+python-engineio==4.9.0
+python-socketio==5.11.1
 simple-websocket==1.0.0
 six==1.16.0
-SQLAlchemy==2.0.25
+SQLAlchemy==2.0.27
 tomli==2.0.1
 tomlkit==0.12.3
-typing-extensions==4.9.0
+typing-extensions==4.10.0
 werkzeug==3.0.1
 wsproto==1.2.0
 wtforms==3.1.2
 zipp==3.17.0
+zope.event==5.0
+zope.interface==6.2
